# slice_and_dice

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
src/: data_frame.rs  lib.rs
src/data_frame/: aggregate.rs  aggregation.rs  core.rs  mod.rs  projection.rs  stack.rs  strided_index_view.rs
src/data_frame/util/: mean.rs  mod.rs  tri_product_index_view.rs
src/mapped_index/: categorical_index.rs  compound_index.rs  data_frame.rs  fn_map_index.rs  mod.rs  numeric_range.rs  numeric_range_index.rs  one_to_many.rs  singleton_index.rs  sparse_numeric_index.rs  tuple_utils.rs  union_range.rs
src/mapped_index/util/: as_refs.rs  concat.rs  mod.rs  pluck_split.rs
src/tuple_utils/: aliases.rs  as_refs.rs  concat.rs  core.rs  extract.rs  first_last.rs  mod.rs  prepend_append.rs
