[package]
name = "slice_and_dice"
version = "0.1.0"
edition = "2024"

[dependencies]
peano = "1.0.2"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"], optional = true }
num-traits = "0.2"
rayon = { version = "1.8.0", optional = true }
frunk = { version = "0.4.4", path="../frunk" }
sorted-vec = { version = "0.8.7", features = [] }

[features]
serde = ["dep:serde", "sorted-vec/serde"]
rayon = ["dep:rayon"]
